--- a/Spellchecking_HW.ipynb
+++ b/Spellchecking_HW.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,15 +240,6 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "for i in range(len(true_tokens)):\n",
-    "    if len(true_tokens[i]) != len(bad_tokens[i]):\n",
-    "        print(true_tokens[i], bad_tokens[i], i)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -257,30 +248,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def clear_multiplied(word): #большое количество повторяющихся букв превращается в две повторяющиеся буквы\n",
+    "def clear_multiplied(word): #один раз превращает три повторяющиеся буквы в две\n",
     "    delword = []\n",
     "    clear_word = word\n",
-    "    for i in range(len(word)-3, 0, -1):\n",
-    "        if word[i] == word[i+1] and word[i] == word[i+2]: \n",
-    "            delword.append(i) \n",
-    "        clear_word = del_letter(clear_word, len(word)-i)       #иду от конца к началу, чтобы не сдвигались индексы\n",
+    "    for i in range(len(word)-3):\n",
+    "        if word[i] == word[i+1] and word[i] == word[i+2]:\n",
+    "            clear_word = del_letter(clear_word, i) \n",
+    "            break\n",
     "    return clear_word"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "хоршооо\n"
+      "хорошооооо\n"
      ]
     }
    ],
@@ -290,37 +281,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
     "def clear_all_multiplied(word):\n",
     "    word2 = word\n",
     "    while clear_multiplied(clear_multiplied(word2)) != clear_multiplied(word2):\n",
-    "        word2 = clear_multiplied(word2)\n",
+    "        word2 = clear_multiplied(clear_multiplied(word2))\n",
     "    return word2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "хоро\n"
+      "оччччень оччень\n",
+      "каааак каак\n",
+      "оооочень оочень\n",
+      "оооочень оочень\n",
+      "страааашно страашно\n",
+      "оооочень оочень\n",
+      "оооочень оочень\n",
+      "доолго-дооолго-доооолго доолго-доолго-дооолго\n",
+      "оооочень оочень\n",
+      "мааааммоооочкииии мааммоочкииии\n",
+      "ээээххх ээххх\n",
+      "ооооочень ооочень\n",
+      "ооооочень ооочень\n",
+      "ооооочень ооочень\n",
+      "оооочень оочень\n",
+      "ооооочень ооочень\n",
+      "прррроклятые прроклятые\n",
+      "каааак каак\n",
+      "оооочень оочень\n",
+      "ооооочень ооочень\n",
+      "оооочень оочень\n",
+      "спаааасиб спаасиб\n",
+      "оооочень оочень\n",
+      "кошшшшка кошшка\n",
+      "каааак каак\n",
+      "воооот воот\n",
+      "покажиииии покажиии\n"
      ]
     }
    ],
    "source": [
-    "print(clear_all_multiplied('хорошоооооо')) #это странно, потому что ш не подходит под условие word[i] == word[i+1]. Дальше функцию не использую"
+    "#прошу прощения, я так и не поняла, почему функция убрает не все случаи, когда подряд идёт юольше двух одинаковых символов,\n",
+    "#но часть она убирает, так что применю. В примере выше все буквы о точно кириллические.\n",
+    "bad_tokens_multiclean = bad_tokens\n",
+    "for i in bad_tokens_multiclean:\n",
+    "    for token in i:\n",
+    "        new_token = clear_all_multiplied(token)\n",
+    "        if new_token != token:\n",
+    "            print(token, new_token)\n",
+    "            token = new_token"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,14 +369,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'кода', 'кора', 'коба', 'кожа', 'копа', 'коап', 'кома', 'коза', 'коса', 'кота'}\n"
+      "{'кожа', 'копа', 'коба', 'кота', 'коза', 'коап', 'кора', 'кома', 'кода', 'коса'}\n"
      ]
     }
    ],
@@ -361,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,19 +422,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
     "bad_list = []\n",
-    "for i in bad_tokens:\n",
+    "for i in bad_tokens_multiclean:\n",
     "    for j in i:\n",
     "        bad_list.append(j)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,21 +443,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = len(bad_tokens)\n",
+    "n = len(bad_tokens_multiclean)\n",
     "corrected_randomoption = [[] for i in range(n)]\n",
     "for i in range(n):\n",
-    "    for token in bad_tokens[i]:\n",
+    "    for token in bad_tokens_multiclean[i]:\n",
     "        if token not in corrections:\n",
     "                corrected_randomoption[i].append(token)\n",
     "        else:\n",
@@ -442,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,14 +505,14 @@
     "                    wrong_at_bad += 1\n",
     "                    if true_word == corrected_word:\n",
     "                        really_corrected += 1\n",
+    "                    else:\n",
+    "                        total_mistaken += 1\n",
+    "                        not_corrected += 1\n",
     "                else:\n",
-    "                    total_mistaken += 1\n",
-    "                    not_corrected += 1\n",
-    "            else:\n",
-    "                correct_at_bad += 1\n",
-    "                if true_word != corrected_word:\n",
-    "                    total_mistaken += 1\n",
-    "                    broken += 1\n",
+    "                    correct_at_bad += 1\n",
+    "                    if true_word != corrected_word:\n",
+    "                        total_mistaken += 1\n",
+    "                        broken += 1\n",
     "    metrics_dict = {}\n",
     "    metrics_dict['%mistakes'] = total_mistaken/(correct_at_bad + wrong_at_bad)\n",
     "    metrics_dict['%corrected'] = really_corrected/wrong_at_bad * 100\n",
@@ -504,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,14 +531,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'%mistakes': 4.034952337721289, '%corrected': 26.552795031055897, '%broken': 19.89071038251366}\n"
+      "{'%mistakes': 0.1567783891945973, '%corrected': 27.251552795031053, '%broken': 7.235557597335478}\n"
      ]
     }
    ],
@@ -537,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,67 +578,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 125,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "unexpected unindent (<ipython-input-260-c9aa224e212e>, line 19)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-260-c9aa224e212e>\"\u001b[1;36m, line \u001b[1;32m19\u001b[0m\n\u001b[1;33m    return corrected_text\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unexpected unindent\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def trigram_correct_sentence(sentence, corrections, bigrams, trigrams):\n",
-    "    print(corrections)\n",
     "    corrected_sent = ['<start>', '<start>']\n",
     "    for word in sentence:\n",
     "        if word not in corrections:\n",
     "            corrected_sent.append(word)\n",
     "        else:\n",
-    "            wordset = corrections[word]\n",
-    "            if len(wordset) == 1:\n",
-    "                corrected_sent.append = wordset.pop()\n",
+    "            correction = list(corrections[word])\n",
+    "            if len(correction) == 1:\n",
+    "                corrected_sent.append(correction[0])\n",
     "            else:\n",
-    "                corrected_bigram = corrected_sent[-2] + ' ' + corrected_sent[-1]\n",
+    "                try:\n",
+    "                    corrected_bigram = corrected_sent[-2] + ' ' + corrected_sent[-1]\n",
+    "                except:\n",
+    "                    print(isinstance(corrected_sent[-2] , str))\n",
     "                max_p = 0\n",
     "                max_p_words = []\n",
-    "                p_max_trigram = p_max_words(trigrams, bigrams, corrected_bigram, wordset)\n",
+    "                p_max_trigram = p_max_words(trigrams, bigrams, corrected_bigram, correction)\n",
     "                try:\n",
-    "                    chosen = random.choice(p_max_trigram)  #берём любое слово из самых вероятных\n",
-    "                    corrected_text[i].append(chosen)\n",
-    "    return corrected_text\n",
-    "#почему jupiter не подсвечивает красным положение return, а при запуске выдаёт unexpected unindent?"
+    "                    chosen = random.choice(list(p_max_trigram))  #берём любое слово из самых вероятных\n",
+    "                    corrected_sent.append(chosen)\n",
+    "                except:\n",
+    "                    corrected_sent.append(word)  #если по какой-то причине список кандидатов оказался пустым,\n",
+    "    return corrected_sent                           #добавится изначальное слово"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 126,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "set()\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'corrected_text' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-255-3bd4851b5b28>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mcorrected_text_trigrams\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mtrigram_correct_sentence\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msent\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcorrections\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbigrams\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrigrams\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0msent\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mbad_tokens\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;31m#не берём тэги начала предложения\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-255-3bd4851b5b28>\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mcorrected_text_trigrams\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mtrigram_correct_sentence\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msent\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcorrections\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbigrams\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrigrams\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0msent\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mbad_tokens\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;31m#не берём тэги начала предложения\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-244-40dbe9055696>\u001b[0m in \u001b[0;36mtrigram_correct_sentence\u001b[1;34m(sentence, corrections, bigrams, trigrams)\u001b[0m\n\u001b[0;32m     17\u001b[0m                 \u001b[1;32mexcept\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m                     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mwordset\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m                 \u001b[0mcorrected_text\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mchosen\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     20\u001b[0m     \u001b[0msentence\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m#убираем '<start>'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m     \u001b[0msentence\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'corrected_text' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "corrected_text_trigrams = [trigram_correct_sentence(sent, corrections, bigrams, trigrams)[2:] for sent in bad_tokens]\n",
     "#не берём тэги начала предложения"
@@ -628,10 +619,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'%mistakes': 0.16258129064532267, '%corrected': 22.748447204968944, '%broken': 7.235557597335478}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dist_metrics_trigram = metrics(true_tokens, bad_tokens, corrected_text_trigrams)\n",
+    "print(dist_metrics_trigram) \n",
+    "#процент broken не изменился, так как для этой метрики неважно, на что заменено правильное слово\n",
+    "#процент corrected понизился"
+   ]
   },
   {
    "cell_type": "code",
