--- a/KeywordExtraction.ipynb
+++ b/KeywordExtraction.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [
         "ocSQNw2v6EeI"
       ],
-      "authorship_tag": "ABX9TyNBAvICrMBzDesEiyc6f2M8",
+      "authorship_tag": "ABX9TyMfCZoiC4fMbSg9TPANHGGs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
       "metadata": {
         "id": "dsn0nBS4Q1Bh",
         "colab_type": "code",
-        "outputId": "fab5b3a2-2804-420d-c3f7-be39b097fcbf",
+        "outputId": "60dbe45d-ad5f-4912-d5bd-50288c5cb24b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -52,7 +52,7 @@
         "nltk.download('stopwords')\n",
         "stops = set(stopwords.words('russian'))"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -69,7 +69,7 @@
       "metadata": {
         "id": "GS3XlmPIVA8Q",
         "colab_type": "code",
-        "outputId": "ab990e08-5220-4d1a-869d-457d93570db0",
+        "outputId": "79fac112-4bbd-4593-a421-3e3891777528",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 232
@@ -78,20 +78,20 @@
       "source": [
         "!pip install pymorphy2"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Collecting pymorphy2\n",
             "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/a3/33/fff9675c68b5f6c63ec8c6e6ff57827dda28a1fa5b2c2d727dffff92dd47/pymorphy2-0.8-py2.py3-none-any.whl (46kB)\n",
-            "\r\u001b[K     |███████                         | 10kB 1.4MB/s eta 0:00:01\r\u001b[K     |██████████████▏                 | 20kB 1.4MB/s eta 0:00:01\r\u001b[K     |█████████████████████▎          | 30kB 2.1MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▍   | 40kB 2.4MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 51kB 2.3MB/s \n",
-            "\u001b[?25hCollecting dawg-python>=0.7\n",
+            "\r\u001b[K     |███████                         | 10kB 16.5MB/s eta 0:00:01\r\u001b[K     |██████████████▏                 | 20kB 840kB/s eta 0:00:01\r\u001b[K     |█████████████████████▎          | 30kB 1.1MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▍   | 40kB 1.3MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 51kB 918kB/s \n",
+            "\u001b[?25hRequirement already satisfied: docopt>=0.6 in /usr/local/lib/python3.6/dist-packages (from pymorphy2) (0.6.2)\n",
+            "Collecting dawg-python>=0.7\n",
             "  Downloading https://files.pythonhosted.org/packages/6a/84/ff1ce2071d4c650ec85745766c0047ccc3b5036f1d03559fd46bb38b5eeb/DAWG_Python-0.7.2-py2.py3-none-any.whl\n",
-            "Requirement already satisfied: docopt>=0.6 in /usr/local/lib/python3.6/dist-packages (from pymorphy2) (0.6.2)\n",
             "Collecting pymorphy2-dicts<3.0,>=2.4\n",
             "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/02/51/2465fd4f72328ab50877b54777764d928da8cb15b74e2680fc1bd8cb3173/pymorphy2_dicts-2.4.393442.3710985-py2.py3-none-any.whl (7.1MB)\n",
-            "\u001b[K     |████████████████████████████████| 7.1MB 7.7MB/s \n",
+            "\u001b[K     |████████████████████████████████| 7.1MB 3.2MB/s \n",
             "\u001b[?25hInstalling collected packages: dawg-python, pymorphy2-dicts, pymorphy2\n",
             "Successfully installed dawg-python-0.7.2 pymorphy2-0.8 pymorphy2-dicts-2.4.393442.3710985\n"
           ],
@@ -216,7 +216,7 @@
       "metadata": {
         "id": "Bm5hEo-cSuqs",
         "colab_type": "code",
-        "outputId": "0265872a-930c-4af7-e358-3a1aef6bc9db",
+        "outputId": "ea78d895-1248-42ef-e3f7-a1d3485a7763",
         "colab": {
           "resources": {
             "http://localhost:8080/nbextensions/google.colab/files.js": {
@@ -247,8 +247,8 @@
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-4b43aa60-a8a9-4d4e-92df-35160689f3a6\" name=\"files[]\" multiple disabled />\n",
-              "     <output id=\"result-4b43aa60-a8a9-4d4e-92df-35160689f3a6\">\n",
+              "     <input type=\"file\" id=\"files-215fc07d-5406-4e5e-bf1b-2605f8501fc6\" name=\"files[]\" multiple disabled />\n",
+              "     <output id=\"result-215fc07d-5406-4e5e-bf1b-2605f8501fc6\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -1656,6 +1656,54 @@
       },
       "source": [
         "Очень похоже на использование Counter, но проигрывает по recall"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8DAY0fhXGGAU",
+        "colab_type": "text"
+      },
+      "source": [
+        "Чтобы можно было оценить, насколько мы близки к максимуму, возможному при использовании только существительных без биграм, посмотрим, какой будет Recall, если считать все существительные ключевыми словами"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "O6BUDzYHJBjD",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 87
+        },
+        "outputId": "01e419de-937c-4172-cdba-892573aabb3c"
+      },
+      "source": [
+        "evaluate(test_data['keywords'], test_data['content_nouns'])"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Precision -  0.02\n",
+            "Recall -  0.52\n",
+            "F1 -  0.04\n",
+            "Jaccard -  0.02\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Xehw7Kt2KANT",
+        "colab_type": "text"
+      },
+      "source": [
+        "В пределах существительных ещё есть куда улучшать полноту"
       ]
     },
     {
