--- a/KeywordExtraction.ipynb
+++ b/KeywordExtraction.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [
         "ocSQNw2v6EeI"
       ],
-      "authorship_tag": "ABX9TyMfCZoiC4fMbSg9TPANHGGs",
+      "authorship_tag": "ABX9TyMk5/n8GXhRdt29ngSMYmp0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1713,8 +1713,107 @@
         "colab_type": "text"
       },
       "source": [
-        "(сюда я вставлю результаты по всем файлам, когда они досчитаются)"
+        "На всех данных (считала в другой тетрадке, результаты вычислений вставлю как текст)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UP4hsbdHpjiW",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#Бейзлайн\n",
+        "pymorphy_cash = {}\n",
+        "def normalize_with_cash(text):    \n",
+        "    words = [word.strip(punct) for word in text.lower().split()]\n",
+        "    lemmas = []\n",
+        "    for word in words:\n",
+        "        if word not in stops:\n",
+        "            if word in pymorphy_cash:\n",
+        "                lemmas.append(pymorphy_cash[word])\n",
+        "            else:\n",
+        "                lemma = morph.parse(word)[0].normal_form\n",
+        "                pymorphy_cash[word] = lemma\n",
+        "                lemmas.append(lemma)\n",
+        "    return lemmas\n",
+        "\n",
+        "data['content_norm'] = data['content'].apply(normalize_with_cash)\n",
+        "\n",
+        "def no_empty_lists(lemmas):\n",
+        "    dummy_lemmas = ['filler', 'filler']\n",
+        "    if lemmas:\n",
+        "        return lemmas\n",
+        "    else:\n",
+        "        print('.')\n",
+        "        return dummy_lemmas\n",
+        "\n",
+        "data['content_norm'] = data['content_norm'].apply(no_empty_lists)\n",
+        "\n",
+        "keywords_rw = data['content_norm'].apply(lambda x: get_kws(x, 10, 10))\n",
+        "evaluate(data['keywords'], keywords_rw)\n",
+        "\n",
+        "#Precision -  0.07\n",
+        "#Recall -  0.09\n",
+        "#F1 -  0.07\n",
+        "#Jaccard -  0.04"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "R8Pwo6dgqKLk",
+        "colab_type": "text"
+      },
+      "source": [
+        "C использованием стеминга"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lDnZurW9qMq6",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "stem_to_word = {}\n",
+        "word_to_stem = {}\n",
+        "\n",
+        "\n",
+        "def prepare_stem_dicts(lemmas):\n",
+        "    for lemma in lemmas:\n",
+        "        if lemma in word_to_stem:\n",
+        "            pass\n",
+        "        else:\n",
+        "            parsed_word = morph.parse(lemma)[0]\n",
+        "            stem = stemmer.stem(lemma)\n",
+        "            word_to_stem[lemma]=stem\n",
+        "            if 'NOUN' in parsed_word.tag:\n",
+        "                stem_to_word[stem]=lemma\n",
+        "\n",
+        "for lemmas in list(data['content_norm']):\n",
+        "    prepare_stem_dicts(lemmas)\n",
+        "\n",
+        "def stems_as_nouns(lemmas):\n",
+        "    chosen = []\n",
+        "    for lemma in lemmas:\n",
+        "        stem = word_to_stem[lemma]\n",
+        "        if stem in stem_to_word:\n",
+        "            chosen.append(stem_to_word[stem])\n",
+        "    return(chosen)\n",
+        "\n",
+        "data['stems_to_nouns'] = data['content_norm'].apply(stems_as_nouns)\n",
+        "data['stems_to_nouns'] = data['stems_to_nouns'].apply(no_empty_lists)\n",
+        "\n",
+        "keywords_rw = data['stems_to_nouns'].apply(lambda x: get_kws(x, 10, 10))\n",
+        "evaluate(data['keywords'], keywords_rw)"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
